[tool.poetry]
name = "fluxsession"
version = "0.1.1"
description = "A Session converter for Telegram unoffical client."
authors = ["Md. Hasibul Kabir <46620128+HasibulKabir@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
telethon = "^1.25.4"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
